organizando os arquivos em pastas

--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <html>
     <head>
         <title>Marjorie</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="source/style/styles.css">
     </head>
 
     <body>
         <div id="container">
             <div id="bot-container">
-                <img id="bot-avatar" src="marjorie.gif">
-                <span id="bot-name">Marjorie</span>
+                <img id="bot-avatar" src="source/asset/marjorie.gif">
+                <span id="bot-name">Marjorie
+                    <span id="bot-descriminator">#4304</span>
+                </span>
                 <span id="bot-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eveniet rem neque mollitia, amet molestiae quos quaerat inventore ab praesentium voluptate, ad sunt blanditiis earum explicabo expedita eos animi aspernatur!</span>
             </div>
 
             <div id="buttons">
-                <a class="fake-button">Suporte</a>
-                <a class="fake-button">Convite</a>
-                <a class="fake-button">Comandos</a>
+                <a class="fake-button" href="https://discord.gg/UwpT7Ur ">Suporte</a>
+                <a class="fake-button" href="https://discord.com/oauth2/authorize?client_id=540604003105374210&permissions=8&scope=bot">Convite</a>
+                <a class="fake-button" href="source/asset/marjorie.gif">Comandos</a>
             </div>
         </div>
     </body>
