--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <span id="bot-name">Marjorie
                     <span id="bot-descriminator">#4304</span>
                 </span>
-                <span id="bot-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eveniet rem neque mollitia, amet molestiae quos quaerat inventore ab praesentium voluptate, ad sunt blanditiis earum explicabo expedita eos animi aspernatur!</span>
+                <span id="bot-description">&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eveniet rem neque mollitia, amet molestiae quos quaerat inventore ab praesentium voluptate, ad sunt blanditiis earum explicabo expedita eos animi aspernatur!</span>
             </div>
 
             <div id="buttons">
