added href buttons index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <div id="buttons">
                 <a class="fake-button" href="https://discord.gg/UwpT7Ur ">Suporte</a>
                 <a class="fake-button" href="https://discord.com/oauth2/authorize?client_id=540604003105374210&permissions=8&scope=bot">Convite</a>
-                <a class="fake-button" href="source/asset/marjorie.gif">Comandos</a>
+                <a class="fake-button" href="source/html/commands.html">Comandos</a>
+                <a class="fake-button" href="source/html/team.html">Equipe</a>
             </div>
         </div>
     </body>
