abrindo outra aba quando clica no botão

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             </div>
 
             <div id="buttons">
-                <a class="fake-button" href="https://discord.gg/UwpT7Ur ">Suporte</a>
-                <a class="fake-button" href="https://discord.com/oauth2/authorize?client_id=540604003105374210&permissions=8&scope=bot">Convite</a>
+                <a class="fake-button" href="https://discord.gg/UwpT7Ur" target="_blank">Suporte</a>
+                <a class="fake-button" href="https://discord.com/oauth2/authorize?client_id=540604003105374210&permissions=8&scope=bot" target="_blank">Convite</a>
                 <a class="fake-button" href="source/html/commands.html">Comandos</a>
                 <a class="fake-button" href="source/html/team.html">Equipe</a>
             </div>
         </div>
     </body>
 </html>
+a
