team.html mais bonitao

--- a/source/html/team.html
+++ b/source/html/team.html
@@ -7,53 +7,90 @@
     </head>
 
     <body>
-        <div class="flex">
-            <div class="user-card">
-                <h1>Nium</h1>
+        <p>Se quiser voltar para a página inicial, só clicar <a href="../../index.html" id="main-page-link" class="tag">aqui</a>!</p>
+        <p>Você pode encontrar todas as pessoas abaixo no servidor de suporte.</p>
 
-                <div class="user-img">
-                    <img src="../asset/nium.png">
-                    <p>Abóbora não tem um gosto muito bom não...</p>
+        <div class="discord-messages-container">
+            <div class="discord-container">
+                <img class="discord-avatar" src="../asset/nium.png">
+                <div class="discord-user-info">
+                    <h1>Nium</h1>
+                    <p>Abóbora não tem um gosto bom não...</p>
+
+                    <div class="discord-user-tags">
+                        <span class="tag">Developer</span>
+                    </div>
                 </div>
             </div>
 
-            <div class="user-card">
-                <h1>Deivinni</h1>
-
-                <div class="user-img">
-                    <img src="https://images-ext-1.discordapp.net/external/ktNuv0cC54J84AwfShIUUXrs6MCsOr56TJk15BCR2xE/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/515903666360942594/a_73e9941d6a870b8f1caacdceaa64d992.gif">
+            <div class="discord-container">
+                <img class="discord-avatar" src="https://images-ext-1.discordapp.net/external/ktNuv0cC54J84AwfShIUUXrs6MCsOr56TJk15BCR2xE/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/515903666360942594/a_73e9941d6a870b8f1caacdceaa64d992.gif">
+                <div class="discord-user-info">
+                    <h1>Deivinni</h1>
                     <p>Rosas são vermelhas, violetas são azuis... Sua bunda me encanta, seus peitos me seduz!</p>
+
+                    <div class="discord-user-tags">
+                        <span class="tag">Community Manager</span>
+                        <span class="tag">Suport</span>
+                        <span class="tag">Colaborator</span>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="flex">
-            <div class="user-card">
-                <h1>Loliticos</h1>
-
-                <div class="user-img">
-                    <img src="https://images-ext-2.discordapp.net/external/dj5n_o8igkGaE5usmiiefrmpQ8avyBlK8tmpFUmf8N4/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/532294395655880705/a_f4fb2c3d63160d19ad8d72a839e7cd6e.gif">
+            <div class="discord-container">
+                <img class="discord-avatar" src="https://images-ext-2.discordapp.net/external/dj5n_o8igkGaE5usmiiefrmpQ8avyBlK8tmpFUmf8N4/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/532294395655880705/a_f4fb2c3d63160d19ad8d72a839e7cd6e.gif">
+                <div class="discord-user-info">
+                    <h1>Loliticos</h1>
                     <p>Tudo na vida depende do quanto você quer comer alguém você trabalha, para comer alguém, você estuda, para comer alguém</p>
+
+                    <div class="discord-user-tags">
+                        <span class="tag">Community Manager</span>
+                        <span class="tag">Suport</span>
+                        <span class="tag">Colaborator</span>
+                        <span class="tag">Donator</span>
+                    </div>
                 </div>
             </div>
 
-            <div class="user-card">
-                <h1>DNK</h1>
+            <div class="discord-container">
+                <img class="discord-avatar" src="https://images-ext-1.discordapp.net/external/bgrmcQB05Dflr-9dFG_rHpXmsamYDvLU_g62cVc_uXc/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/647452832852869120/16b26744671648620e82f71292ba40a0.webp">
+                <div class="discord-user-info">
+                    <h1>DNK</h1>
+                    <p>Sic Mundus Creatus Est</p>
 
-                <div class="user-img">
-                    <img src="https://images-ext-1.discordapp.net/external/bgrmcQB05Dflr-9dFG_rHpXmsamYDvLU_g62cVc_uXc/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/647452832852869120/16b26744671648620e82f71292ba40a0.webp">
-                    <p>Sic Mundus Creatus Est.</p>
+                    <div class="discord-user-tags">
+                        <span class="tag">Translator</span>
+                        <span class="tag">Colaborator</span>
+                    </div>
                 </div>
             </div>
 
-            <div class="user-card">
-                <h1>Cebela</h1>
+            <div class="discord-container">
+                <img class="discord-avatar" src="https://images-ext-2.discordapp.net/external/XIytCQFWxBDbhRWtf728P-9L9ooTDdH408iQGJPpvZA/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/679095889553391626/2e98296f20e097ccc42035751c88255c.webp">
+                <div class="discord-user-info">
+                    <h1>Apenas Um Sleme</h1>
+                    <p>frase dq?</p>
 
-                <div class="user-img">
-                    <img src="https://images-ext-2.discordapp.net/external/XIytCQFWxBDbhRWtf728P-9L9ooTDdH408iQGJPpvZA/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/679095889553391626/2e98296f20e097ccc42035751c88255c.webp">
-                    <p>...</p>
+                    <div class="discord-user-tags">
+                        <span class="tag">Suport</span>
+                        <span class="tag">Colaborator</span>
+                        <span class="tag">Donator</span>
+                    </div>
                 </div>
             </div>
+
+            <div class="discord-container">
+                <img class="discord-avatar" src="https://images-ext-2.discordapp.net/external/Kg8GR2rzUDlSTlKqPumpLzGpewrV_BaUTbnt23AMgAs/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/726083445222277200/27ee42720af176ae07c97c0ac2073517.webp">
+                <div class="discord-user-info">
+                    <h1>DudekKvar</h1>
+                    <p>50 DERROTAS É DE FUDE VÉI</p>
+
+                    <div class="discord-user-tags">
+                        <span class="tag">Colaborator</span>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
