--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             </div>
         </div>
 
-        <div class="container max-size" style="position: absolute;">
-            <div class="display-flex" >
-                <div id="image">
-                    <img id="marjorie-img" src="source/assets/avatars/marjorie.jpg">
+        <div class="max-size container position-absolute">
+            <div id="middle">
+                <div class="container">
+                    <div id="image">
+                        <img id="marjorie-img" src="source/assets/avatars/marjorie.jpg">
+                    </div>
                 </div>
                 <div id="content" class="container">
                     <h1 id="title">A new way to have <strong>fun</strong> in Discord!</h1>
